# docker-bake-playground

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  article-part-2.md  article.md  build-and-publish-images-artifact-registry-cache.yaml  build-and-publish-images-artifact-registry.yaml  compose_bake_example.yaml  compose_lint_and_test.yaml  docker-bake-app-and-infra-cache.hcl  docker-bake-app-and-infra.hcl  docker-bake-dagger-base.hcl  docker-bake-github-repo.hcl  docker-bake-inheritance.hcl  docker-bake-inheritence.hcl  docker-bake-lint-and-test-cache.hcl  docker-bake-lint-and-test.hcl  docker-bake-matrix-variants.hcl  docker-bake-matrix.hcl  docker-bake-scan-pass.hcl  docker-bake.hcl  local.hcl  pyproject.toml  vars.hcl
.github/workflows/: build-with-docker-bake-override-params.yaml  build-with-docker-bake-tags.yaml  build-with-docker-bake.yaml
dagger/: dagger.json
dagger/src/: pyproject.toml
dagger/src/docker_bake/: __init__.py  main.py
diagrams/: dagger-pipeline.excalidraw  docker_bake.excalidraw
images/alpine-simple/: Dockerfile
images/app-matrix/: Dockerfile
images/app-matrix/alpine-3-17/: Dockerfile
images/app-matrix/alpine-3-21/: Dockerfile
images/app-matrix/bookworm-12-2/: Dockerfile
images/dagger-bake-base/: Dockerfile
images/python_linter/: Dockerfile
images/python_tests/: Dockerfile
infra/: Dockerfile
python_app/: validator.py
python_app/tests/: test_validator.py
scripts/: build_app_and_infra_images.sh  build_app_and_infra_images_with_for_loop.sh  build_matrix_variants.sh
(+3 files in other folders)
