[project]
name = "python-app-docker"
version = "0.1.0"
description = "Example of a Python app with linter and tests used with Docker Bake"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pytest==9.0.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.4",
    "dagger-io==0.19.10"
]

[tool.pylint.'MAIN']
ignore = ["tests"]

[tool.pytest.ini_options]
addopts = "--cov=python_app --cov-report=term --junitxml=reports/test-results.xml"
